[package]
name = "fc-rpc-core"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "RPC traits of Ethereum."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-pubsub = "15.1.0"
rustc-hex = "2.1.0"
ethereum-types = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
