[package]
name = "frontier-template-node"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

sp-api = { version = "*" }
sp-blockchain = { version = "*" }
sc-rpc-api = { version = "*" }
sc-rpc = { version = "*" }
substrate-frame-rpc-system = { version = "*" }
pallet-transaction-payment-rpc = { version = "*" }
sc-cli = { version = "*" }
sp-core = { version = "*" }
sc-executor = { version = "*" }
sc-service = { version = "*" }
sp-inherents = { version = "*" }
sc-transaction-pool = { version = "*" }
sp-transaction-pool = { version = "*" }
sc-network = { version = "*" }
sc-consensus-aura = { version = "*" }
sp-consensus-aura = { version = "*" }
sc-consensus-manual-seal = { version = "*" }
sp-consensus = { version = "*" }
sc-consensus = { version = "*" }
sp-timestamp = { version = "*" }
pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
sc-finality-grandpa = { version = "*" }
sp-finality-grandpa = { version = "*" }
sc-client-api = { version = "*" }
sp-runtime = { version = "*" }
sc-basic-authorship = { version = "*" }
sp-block-builder = { version = "*" }

fc-consensus = { path = "../../client/consensus" }
frontier-template-runtime = { path = "../runtime" }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }

[build-dependencies]
substrate-build-script-utils = { version = "*" }
