[package]
name = "frontier-template-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1" }
sp-runtime = { version = "*" }
sp-api = { version = "*" }
sc-executor = { version = "*" }
sc-light = { version = "*" }
sc-consensus = { version = "*" }
sc-client-api = { version = "*" }
frontier-template-runtime = { path = "../../runtime" }
substrate-test-client = { version = "*" }
